bobcat (5.03.00)

  * Fixed the  PerlSetFSA s_stateTransitions FSA used by Pattern: 

  * Updated the Stat and Process man-pages



bobcat (5.02.00)

  * Added the member 'on' to the class 'Log'.

  * The member Log::off suppresses logging. Suppression can be undone by
    calling 'on'. The member 'setLevel' cannot be used anymore to reactivate
    logging.

  * Added the enumeration 'Active' to 'LogBuf' allowing derived
    classes to deactivate or suppress logging information.

  * Added the member 'LogBuf::empty' returning 'true' if the object's buffer
    is empty.

  * Added the member 'LogBuf::setActive(Active)'.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 11 Dec 2019 11:06:34 +0100

bobcat (5.01.00)

  * Fixed a bug in the conversion mode recognition in BigInt::fromText

  * Added User(size_t uid) and User(string const &name) constructors to the
    class User.

  * Added the missing copy constructor and copy assignment operator to the
    class User.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 30 Nov 2019 09:06:43 +0100

bobcat (5.00.03)

  * Suppressed SF cerr stmnt in digestbuf/eoi.cc

  * Added missing ; to [[fallthrough]] attributes

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 08 Sep 2019 17:00:50 +0200

bobcat (5.00.02)

  * Fixed an error in SyslogBuf's constructor: it now correctly defines the 
    logged message head as SyslogBuf's first argument.

  * LogBuf's member `active' now (de)activates logging until another `active'
    call. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 03 Jun 2019 16:35:26 +0200

bobcat (5.00.01)

  * Changed overlooked references to ...bobcat4 into ...bobcat5

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 01 May 2019 20:38:19 +0200

bobcat (5.00.00)

  * All classes derived from std::streambuf are now called ...Buf:
        Base64StreambufBase         -> Base64BufBase
        IBase64Streambuf            -> IBase64Buf
        IFdStreambuf                -> IFdBuf