@@ -1,0 +1,7 @@
+#include "pipe.ih"
+
+void Pipe::close()
+{
+    close(READ);
+    close(WRITE);
+}
