@@ -1,0 +1,5 @@
+inline void Pipe::closeReadFd()
+{
+    close(READ);
+}
+
