@@ -1,0 +1,4 @@
+inline void Pipe::closeWriteFd()
+{
+    close(WRITE);
+}
