@@ -1,0 +1,5 @@
+#include "pipe.ih"
+
+void Pipe::
+{
+}
