@@ -1,0 +1,4 @@
+inline void Pipe::swap(Pipe &other)
+{
+    FBB::fswap(*this, other);
+}
