@@ -1,11 +1,12 @@
 #include "pipe.ih"
 
-void Pipe::writtenBy(int fd)
-{
-    close(d_fd[READ]);
+void Pipe::writtenBy(int fd)        // fd rather than the pipe's write fd
+{                                   // is used to write to the pipe
 
-    Redirector  d(d_fd[WRITE]);
-    d.swallow(fd);
+    close(READ);              // we're writing, not reading
 
-    close(d_fd[WRITE]);
+    Redirector  redirector{ d_fd[WRITE] };  // perform the redirection:
+    redirector.swallow(fd);                 // fd writes
+
+    close(WRITE);             // we don't need this anymore.
 }
