@@ -1,7 +1,0 @@
-#include "process.ih"
-
-void Process::closeReadFd(Pipe &pipe)
-{
-    close(pipe.readFd());
-}
-
