@@ -1,7 +1,0 @@
-#include "process.ih"
-
-void Process::closeWriteFd(Pipe &pipe)
-{
-    close(pipe.writeFd());
-}
-
