@@ -25,8 +25,8 @@ try
 
         // Nota bene: without IOMode you get CIN, COUT and CERR
     Process p1(Process::CIN, "/bin/cat"); 
-    Process p2(Process::STD, "/bin/cat");
-    Process p3(Process::STD, "/bin/cat");
+    Process p2(Process::NONE, "/bin/cat");
+    Process p3(Process::NONE, "/bin/cat");
 
 
     prompt("sending lines (until empty) to cat | cat | cat");
